--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -3,13 +3,13 @@ name: CI
 on:
   push:
     paths: # Specifying which files to run CI/CD for
-    - src/* 
+    - src/** 
     - test/runtests.jl
     - Manifest.toml
     - Project.toml
   pull_request:
     paths:
-    - src/* 
+    - src/** 
     - test/runtests.jl
     - Manifest.toml
     - Project.toml
