--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "MTSG"
 uuid = "cc44fc10-d0fb-5545-af72-ba1cb661a341"
 authors = ["Naoki Saito <saito@math.ucdavis.edu>", "Yiqun Shao <shaoyiqun1992@gmail.com>"]
-version = "1.3.3"
+version = "1.3.4"
 
 [deps]
 Arpack = "7d9fca2a-8960-54d3-9f78-7d1dccf2cb97"
@@ -16,7 +16,14 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
-julia = "≥ 1.0.0"
+Arpack = "0.5.2"
+AverageShiftedHistograms = "0.8.6"
+Distances = "0.10.2"
+Distributions = "0.24.18"
+JLD2 = "0.4.3"
+Plots = "1.12.0"
+Reexport = "1.0.0"
+julia = "≥ 1.5"
 
 [extras]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
