--- a/Project.toml
+++ b/Project.toml
@@ -23,7 +23,7 @@ Distributions = "0.24.18"
 JLD2 = "0.4.3"
 Plots = "1.12.0"
 Reexport = "1.0.0"
-julia = "≥ 1.5"
+julia = "1.5, 1.6"
 
 [extras]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
