--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "MTSG"
+name = "MultiscaleGraphSignalTransforms"
 uuid = "cc44fc10-d0fb-5545-af72-ba1cb661a341"
 authors = ["Naoki Saito <saito@math.ucdavis.edu>", "Yiqun Shao <shaoyiqun1992@gmail.com>"]
 version = "1.3.5"
