--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,8 +1,10 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
 MultiscaleGraphSignalTransforms = "cc44fc10-d0fb-5545-af72-ba1cb661a341"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+WaveletsExt = "8f464e1e-25db-479f-b0a5-b7680379e03f"
 
 [compat]
 Documenter = "0.26"
 MultiscaleGraphSignalTransforms = "1.5"
-
