--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "MultiscaleGraphSignalTransforms"
 uuid = "cc44fc10-d0fb-5545-af72-ba1cb661a341"
 authors = ["Naoki Saito <saito@math.ucdavis.edu>", "Yiqun Shao <shaoyiqun1992@gmail.com>", "Haotian Li <htsli@ucdavis.edu>"]
-version = "1.6.7"
+version = "1.6.8"
 
 [deps]
 Arpack = "7d9fca2a-8960-54d3-9f78-7d1dccf2cb97"
@@ -13,7 +13,7 @@ Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
-LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
@@ -34,14 +34,14 @@ Distributions = "0.24.18, 0.25"
 JLD = "0.12.3, 0.13"
 JLD2 = "0.4.9"
 JuMP = "0.21.3, 0.22, 0.23, 1"
-LightGraphs = "1.3.5"
+Graphs = "1.6.0"
 Optim = "1.3.0"
 Plots = "1.12.0"
 QuadGK = "2.4.1"
 Reexport = "1.0.0"
 SimpleWeightedGraphs = "1.1.1"
 StatsBase = "0.33.6"
-julia = "1.5, 1.6"
+julia = "1.6, 1.7"
 
 [extras]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
