--- a/Project.toml
+++ b/Project.toml
@@ -41,7 +41,7 @@ QuadGK = "2.4.1"
 Reexport = "1.0.0"
 SimpleWeightedGraphs = "1.1.1"
 StatsBase = "0.33.6"
-julia = "1.6, 1.7"
+julia = "1.5, 1.6, 1.7"
 
 [extras]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
