--- a/Project.toml
+++ b/Project.toml
@@ -28,6 +28,7 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Arpack = "0.4.0, 0.5"
 AverageShiftedHistograms = "0.8.6"
 Clp = "0.8.3, 0.9, 1"
+Clp_jll = "v100.1700.601+0"
 Clustering = "0.14.2"
 Distances = "0.10.2"
 Distributions = "0.24.18, 0.25"
