--- a/Project.toml
+++ b/Project.toml
@@ -24,6 +24,25 @@ SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
+[compat]
+Arpack = "0.4.0, 0.5"
+AverageShiftedHistograms = "0.8.6"
+Clp = "0.8.3, 0.9, 1"
+Clustering = "0.14.2"
+Distances = "0.10.2"
+Distributions = "0.24.18, 0.25"
+Graphs = "1.6.0"
+JLD = "0.12.3, 0.13"
+JLD2 = "0.4.9"
+JuMP = "0.21.3, 0.22, 0.23, 1"
+Optim = "1.3.0"
+Plots = "1.12.0"
+QuadGK = "2.4.1"
+Reexport = "1.0.0"
+SimpleWeightedGraphs = "1.1.1"
+StatsBase = "0.33.6"
+julia = "1.6, 1.7"
+
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
