--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,7 +1,7 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
-LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MultiscaleGraphSignalTransforms = "cc44fc10-d0fb-5545-af72-ba1cb661a341"
 MultivariateStats = "6f286f6a-111f-5878-ab1e-185364afe411"
@@ -11,8 +11,8 @@ WaveletsExt = "8f464e1e-25db-479f-b0a5-b7680379e03f"
 [compat]
 Documenter = "0.26, 0.27"
 LaTeXStrings = "1.2"
-LightGraphs = "1.3"
-MultiscaleGraphSignalTransforms = "1.5"
+Graphs = "1.6.0"
+MultiscaleGraphSignalTransforms = "1.7"
 MultivariateStats = "0.8, 0.9"
 Plots = "1.15"
 WaveletsExt = "0.1"
