--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -9,10 +9,11 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 WaveletsExt = "8f464e1e-25db-479f-b0a5-b7680379e03f"
 
 [compat]
+Clp = "1.0.1"
 Documenter = "0.26, 0.27"
 LaTeXStrings = "1.2"
 Graphs = "1.6.0"
 MultiscaleGraphSignalTransforms = "1.7"
 MultivariateStats = "0.8, 0.9"
-Plots = "1.15"
+Plots = "1.25"
 WaveletsExt = "0.1"
