--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,4 +1,5 @@
 [deps]
+Clp = "e2554f3b-3117-50c0-817c-e040a3ddf72d"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
@@ -9,6 +10,7 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 WaveletsExt = "8f464e1e-25db-479f-b0a5-b7680379e03f"
 
 [compat]
+Clp = "0.8.3, 0.9, 1"
 Documenter = "0.26, 0.27"
 LaTeXStrings = "1.2"
 Graphs = "1.6.0"
