CompatHelper: bump compat for JLD2 to 0.6, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -33,7 +33,7 @@ Distances = "0.10.2"
 Distributions = "0.24.18, 0.25"
 Graphs = "1.6.0"
 JLD = "0.12.3, 0.13"
-JLD2 = "0.4.9"
+JLD2 = "0.4.9, 0.6"
 JuMP = "0.21.3, 0.22, 0.23, 1"
 Optim = "1.4"
 Plots = "1.25"
