--- a/Project.toml
+++ b/Project.toml
@@ -28,7 +28,7 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Arpack = "0.4.0, 0.5.3"
 AverageShiftedHistograms = "0.8.7"
 Clp = "1.0.1"
-Clustering = "0.14.2"
+Clustering = "0.14.2, 0.15"
 Distances = "0.10.2"
 Distributions = "0.24.18, 0.25"
 Graphs = "1.6.0"
