--- a/Project.toml
+++ b/Project.toml
@@ -40,7 +40,7 @@ Plots = "1.25"
 QuadGK = "2.4"
 Reexport = "1"
 SimpleWeightedGraphs = "1.1.1"
-StatsBase = "0.33.6"
+StatsBase = "0.33.6, 0.34"
 julia = "1.6, 1.7, 1.8"
 
 [extras]
