--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -11,7 +11,7 @@ WaveletsExt = "8f464e1e-25db-479f-b0a5-b7680379e03f"
 
 [compat]
 Clp = "1.0.1"
-Documenter = "0.26, 0.27"
+Documenter = "0.26, 0.27, 1"
 Graphs = "1.6.0"
 LaTeXStrings = "1.2"
 MultiscaleGraphSignalTransforms = "1.7"
