--- a/Project.toml
+++ b/Project.toml
@@ -40,8 +40,9 @@ Plots = "1.25"
 QuadGK = "2.4"
 Reexport = "1"
 SimpleWeightedGraphs = "1.1.1"
+Statistics = "1"
 StatsBase = "0.33.6, 0.34"
-julia = "1.6, 1.7, 1.8"
+julia = ">= 1.10"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
