--- a/Project.toml
+++ b/Project.toml
@@ -6,11 +6,11 @@ version = "1.7.4"
 [deps]
 Arpack = "7d9fca2a-8960-54d3-9f78-7d1dccf2cb97"
 AverageShiftedHistograms = "77b51b56-6f8f-5c3a-9cb4-d71f9594ea6e"
-Clp = "e2554f3b-3117-50c0-817c-e040a3ddf72d"
 Clustering = "aaaa29a8-35af-508c-8bc3-b662a17a0fe5"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+HiGHS = "87dc4568-4c63-4d18-b0c0-bb2238e4078b"
 JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
@@ -27,11 +27,11 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 [compat]
 Arpack = "0.4.0, 0.5.3"
 AverageShiftedHistograms = "0.8.7"
-Clp = "1.0.1"
 Clustering = "0.14.2, 0.15"
 Distances = "0.10.2"
 Distributions = "0.24.18, 0.25"
 Graphs = "1.6.0"
+HiGHS = ">= 1"
 JLD = "0.12.3, 0.13"
 JLD2 = "0.4.9, 0.6"
 JuMP = "0.21.3, 0.22, 0.23, 1"
