--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,7 +1,7 @@
 [deps]
-Clp = "e2554f3b-3117-50c0-817c-e040a3ddf72d"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
+HiGHS = "87dc4568-4c63-4d18-b0c0-bb2238e4078b"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MultiscaleGraphSignalTransforms = "cc44fc10-d0fb-5545-af72-ba1cb661a341"
@@ -10,11 +10,11 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 WaveletsExt = "8f464e1e-25db-479f-b0a5-b7680379e03f"
 
 [compat]
-Clp = "1.0.1"
 Documenter = "0.26, 0.27, 1"
-Graphs = "1.6.0"
-LaTeXStrings = "1.2"
+Graphs = ">= 1.6.0"
+HiGHS = ">= 1"
+LaTeXStrings = ">= 1.2"
 MultiscaleGraphSignalTransforms = "1.7"
 MultivariateStats = "0.8, 0.9, 0.10"
-Plots = "1.25"
+Plots = ">= 1.25"
 WaveletsExt = "0.1, 0.2"
