--- a/Project.toml
+++ b/Project.toml
@@ -23,6 +23,7 @@ SimpleWeightedGraphs = "47aef6b3-ad0c-573a-a1e2-d07658019622"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+WaveletsExt = "8f464e1e-25db-479f-b0a5-b7680379e03f"
 
 [compat]
 Arpack = "0.4.0, 0.5.3"
@@ -42,6 +43,7 @@ Reexport = "1"
 SimpleWeightedGraphs = "1.1.1"
 Statistics = "1"
 StatsBase = "0.33.6, 0.34"
+WaveletsExt = "0.2.2"
 julia = ">= 1.10"
 
 [extras]
