Removed unbounded version compats from Project.toml

--- a/Project.toml
+++ b/Project.toml
@@ -31,20 +31,20 @@ AverageShiftedHistograms = "0.8.7"
 Clustering = "0.14.2, 0.15"
 Distances = "0.10.2"
 Distributions = "0.24.18, 0.25"
-Graphs = "1.6.0"
-HiGHS = ">= 1"
+Graphs = "1"
+HiGHS = "1"
 JLD = "0.12.3, 0.13"
 JLD2 = "0.4.9, 0.6"
 JuMP = "0.21.3, 0.22, 0.23, 1"
 Optim = "1.4"
-Plots = "1.25"
+Plots = "1.3, 1.4"
 QuadGK = "2.4"
 Reexport = "1"
 SimpleWeightedGraphs = "1.1.1"
 Statistics = "1"
 StatsBase = "0.33.6, 0.34"
-WaveletsExt = "0.2.2"
-julia = ">= 1.10"
+WaveletsExt = "0.2"
+julia = "1.10, 1.11"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
