--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -11,10 +11,10 @@ WaveletsExt = "8f464e1e-25db-479f-b0a5-b7680379e03f"
 
 [compat]
 Documenter = "0.26, 0.27, 1"
-Graphs = ">= 1.6.0"
-HiGHS = ">= 1"
-LaTeXStrings = ">= 1.2"
-MultiscaleGraphSignalTransforms = "1.7"
+Graphs = "1"
+HiGHS = "1"
+LaTeXStrings = "1.2"
+MultiscaleGraphSignalTransforms = "1.8"
 MultivariateStats = "0.8, 0.9, 0.10"
-Plots = ">= 1.25"
-WaveletsExt = "0.1, 0.2"
+Plots = "1.3, 1.4"
+WaveletsExt = "0.2"
