--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -14,7 +14,7 @@ Documenter = "0.26, 0.27, 1"
 Graphs = "1"
 HiGHS = "1"
 LaTeXStrings = "1.2"
-MultiscaleGraphSignalTransforms = "1.8"
+MultiscaleGraphSignalTransforms = "1.8, 1"
 MultivariateStats = "0.8, 0.9, 0.10"
 Plots = "1.3, 1.4"
 WaveletsExt = "0.2"
